@@ -1,10 +1,10 @@
 Package: raster
 Type: Package
 Title: Geographic Data Analysis and Modeling
-Version: 2.5-13
-Date: 2016-06-20
+Version: 2.5-14
+Date: 2016-06-23
 Depends: methods, sp (>= 1.2-0), R (>= 3.0.0)
-Suggests: rgdal (>= 0.9-1), rgeos (>= 0.3-8), ncdf4, igraph, tcltk, parallel, rasterVis
+Suggests: rgdal (>= 0.9-1), rgeos (>= 0.3-8), ncdf4, igraph, tcltk, parallel, rasterVis, MASS
 LinkingTo: Rcpp
 Imports: Rcpp
 Authors@R: c(
