@@ -4,9 +4,9 @@ if (!isGeneric("erase")) {
 		standardGeneric("erase"))
 }	
 
-.gDif <- function(x, y) {
-	xln <- length(x@polygons)
-	yln <- length(y@polygons)
+.gDif <- function(x, y, type='polygons') {
+	xln <- length(x)
+	yln <- length(y)
 	if (xln==0 | yln==0) {
 		return(x)
 	}
@@ -14,7 +14,7 @@ if (!isGeneric("erase")) {
 	for (i in xln:1) {
 		z <- x[i,]
 		for (j in 1:yln) {
-			z <- rgeos::gDifference(z, y[j,])
+			z <- rgeos::gDifference(z, y[j,], drop_lower_td=TRUE)
 			if (is.null(z)) {
 				break
 			}
@@ -23,10 +23,15 @@ if (!isGeneric("erase")) {
 			x <- x[-i,]
 			rn <- rn[-i]
 		} else {
-			x@polygons[i] <- z@polygons
+			if (type=='polygons') {
+				x@polygons[i] <- z@polygons
+			} else {
+				x@lines[i] <- z@lines	
+			}
 		}
+		row.names(x) <- rn				
 	}
-	if (length(x) > 0) {
+	if ((type=='polygons') & (length(x) > 0)) {
 
 		w <- getOption('warn')
 		on.exit(options('warn' = w))
@@ -71,7 +76,7 @@ setMethod(erase, signature(x='SpatialPolygons', y='SpatialPolygons'),
 		}
 		
 		if (!.hasSlot(x, 'data')) {
-			d <- data.frame(ID=1:length(x@polygons))
+			d <- data.frame(ID=1:length(x))
 			rownames(d) <- row.names(x)
 			x <- SpatialPolygonsDataFrame(x, data=d)
 			dropframe <- TRUE
@@ -109,6 +114,58 @@ setMethod(erase, signature(x='SpatialPolygons', y='SpatialPolygons'),
 		} else {
 			return( part2 )
 		}
+	}
+)
+
+setMethod(erase, signature(x='SpatialLines', y='SpatialPolygons'),
+    function(x, y, ...){ 
+	
+		requireNamespace("rgeos")
+		if (! identical(x@proj4string, y@proj4string) ) {
+			warning('non identical CRS')
+			y@proj4string <- x@proj4string
+		}
+		
+		if (!.hasSlot(x, 'data')) {
+			d <- data.frame(ID=1:length(x))
+			rownames(d) <- row.names(x)
+			x <- SpatialLinesDataFrame(x, data=d)
+			dropframe <- TRUE
+		} else {
+			dropframe <- FALSE
+		}
+
+		y <- aggregate(y)
+		
+		int <- rgeos::gIntersects(x, y, byid=TRUE)
+		int1 <- apply(int, 2, any)
+		int2 <- apply(int, 1, any)		
+
+		if (sum(int1) == 0) { # no intersections
+			return(x)
+		}
+		
+		if (all(int1)) {
+			part1 <- NULL
+		} else {
+			part1 <- x[!int1,]
+		}
+		part2 <- .gDif(x[int1,], y[int2,], 'lines')
+
+		part2 <- SpatialLinesDataFrame(part2, x@data[match(row.names(part2), rownames(x@data)), ,drop=FALSE], match.ID = FALSE)
+		if (!is.null(part1)) {
+			part2 <- rbind(part1, part2)
+		}
+			
+		if (length(part2@lines) > 1) {	
+			part2 <- aggregate(part2, colnames(part2@data))
+		}
+		if (dropframe) {
+			return( as(part2, 'SpatialLines') )
+		} else {
+			return( part2 )
+		}		
+
 	}
 )
 
